# ISO-Bench

./: .gitignore  .gitmodules  CLAUDE.md  LICENSE  README.md  commit_to_dataset.py  pyproject.toml  requirements.txt  trae_requirements.txt
ISO-Bench/: .env.example  .gitignore  ARCHITECTURE.md  README.md  bench.yaml  requirements.txt
ISO-Bench/archive/: runs_backup
ISO-Bench/bench/: build_cmd.py  cli.py  git_utils.py  journal.py  pipeline.py  planner.py  prepare.py  repo_manager.py  report.py
ISO-Bench/config/: agent_config.toml  llm_openai.toml  main_openai.toml
ISO-Bench/state/: plan.json  test_plan.json
ISO-Bench/tasks/: chunked_local_attn_optimization.yaml  example.yaml  moe_align_optimization.yaml  prefix_caching_optimization.yaml  sglang.yaml  vllm.yaml
archive/analysis/: AGENT_BENCHMARK_RESULTS.md  BASELINE_BUILD_STATUS.md  BENCHMARK_FAILURE_ANALYSIS.md  BLOCKED_COMMITS_PR_ANALYSIS.md  CODEX_LEAK_ANALYSIS.md  CODEX_SGLANG_RESULTS.md  CODEX_SGLANG_STATUS.md  CODEX_VLLM_RESULTS.md  CODEX_VLLM_STATUS.md  COMPREHENSIVE_BENCHMARK_ANALYSIS.md  CRITICAL_FAILURE_ANALYSIS.md  DOCKER_IMAGE_ANALYSIS.md  FINAL_RESULTS_SUMMARY.md  INFRASTRUCTURE_FAILURE_DETAILED_ANALYSIS.md  PIPELINE_STATUS.md  README_VLLM_BENCHMARKS.md  RETRY_PIPELINE_STATUS.md  SGLANG_CLAUDE_SONNET45_RESULTS.md  SGLANG_CLAUDE_SONNET45_SETUP.md  TRAE_BEDROCK_SONNET45_SETUP.md  all_analysis_incorrect_soft.md  all_analysis_verified.md  vllm_commits_analysis_report.md
archive/docs/: commit_v2.md  commit_v3.md
archive/operational/: 2026-01-06-this-session-is-being-continued-from-a-previous-co.txt  BENCHMARK_TODO.md  baseline_build_list.json  build_progress.json  complete_benchmark_mapping.json  vllm_commits_analysis.json
archive/paper_drafts/: paper-og.tex  paper.tex
archive/session_notes/: 2026-01-09-this-session-is-being-continued-from-a-previous-co-docker.txt  2026-01-09-this-session-is-being-continued-from-a-previous-co.txt  2026-01-15-pull-the-changes-and-help-align-the-other-agents-r.txt
configs/: bedrock_test.yaml  experiments.yaml  single_commit_config.yaml
data/: Inferencebench.jsonl  vllm_dataset_with_test.jsonl
data/archive/: failed_commit_clean.json  (+8 more)
docs/: AGENTS.md  BENCHMARK_RUNNERS.md  ENVIRONMENTS.md  REPRODUCTION.md  dataset_schema.md
tools/: agent_to_modal.py  build_sglang_images.py  download_models_to_modal.py  manual_review.py  modal_sandbox.py  openrouter_patch.py  push_sglang_to_hf.py  run_agent_pipeline.sh  setup_opb.sh  split_vllm_commits.py
(+16308 files in other folders)
